# learn-pixi-build

./: README.md
cpp-hello-world/: pixi.toml
cpp-hello-world-rattler/: CMakeLists.txt  recipe.yaml
cpp_math/: pixi.toml
fort-hello-world/: CMakeLists.txt  README.md  pixi.toml
fort-hello-world-rattler/: CMakeLists.txt  pixi.toml  recipe.yaml
multi-python-rich_cpp-math/: pixi.toml
multi-python-rich_cpp-math-rattler/: pixi.toml
multi-python-rich_flat-layout/python-rich/: pyproject.toml
multi-python-rich_flex-layout/python-rich/: pyproject.toml
multi-python-rich_flex-layout/python_math/: pyproject.toml
multi-python-rich_flex-layout/python_math/src/python_math/: __init__.py
multi-python-rich_python-subpackage/: .gitignore  pyproject.toml
multi-python-rich_python-subpackage/src/python_rich/: __init__.py
python_rich/: pixi.toml
