[project]
dependencies = ["rich"]                              
name = "python_rich"
requires-python = ">= 3.11"
scripts = { rich-example-main = "python_rich:main" } 
version = "0.1.0"

[build-system] 
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace] 
channels = ["https://prefix.dev/conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]
preview = ["pixi-build"]

[tool.pixi.dependencies] 
python_rich = { path = "." }

[tool.pixi.tasks] 
start = "rich-example-main"

[tool.pixi.package] 
name = "python_rich"
version = "0.1.0"

[tool.pixi.package.build] 
backend = { name = "pixi-build-python", version = "==0.3.2" }

[tool.pixi.package.host-dependencies] 
hatchling = "==1.26.3"

[tool.pixi.package.run-dependencies] 
python_math = { path = "packages/python_math" }
rich = "13.9.*"
