[project]
authors = [{name = "avcopan", email = "avcopan@gmail.com"}]
dependencies = []
name = "python_math"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]
preview = ["pixi-build"]

[tool.pixi.pypi-dependencies]
python_math = { path = ".", editable = true }

[tool.pixi.package] 
name = "python_math"
version = "0.1.0"

[tool.pixi.package.build] 
backend = { name = "pixi-build-python", version = "==0.3.2" }

[tool.pixi.package.host-dependencies] 
hatchling = "==1.26.3"
